src/qt/cbor/libqcborarray.bf

	
	public this(QCborArray__ConstIteratorPtr other)
	{
		this.handle = QCborArray__ConstIteratorPtr.New(other);
	}
	
	public ~this()
	{
		this.handle.Dispose();
	}
	
	public void OperatorAssign(QCborArray__ConstIteratorPtr other)
	{
		this.handle.OperatorAssign(other);
	}
	
	public void OperatorMultiply()
	{
		this.handle.OperatorMultiply();
	}
	
	public void* OperatorMinusGreater()
	{
		return this.handle.OperatorMinusGreater();
	}
	
	public void OperatorSubscript(int32 j)
	{
		this.handle.OperatorSubscript(j);
	}
	
	public bool OperatorEqual(QCborArray__IteratorPtr o)
	{
		return this.handle.OperatorEqual(o);
	}
	
	public bool OperatorNotEqual(QCborArray__IteratorPtr o)
	{
		return this.handle.OperatorNotEqual(o);
	}
	
	public bool OperatorLesser(QCborArray__IteratorPtr other)
	{
		return this.handle.OperatorLesser(other);
	}
	
	public bool OperatorLesserOrEqual(QCborArray__IteratorPtr other)
	{
		return this.handle.OperatorLesserOrEqual(other);
	}
	
	public bool OperatorGreater(QCborArray__IteratorPtr other)
	{
		return this.handle.OperatorGreater(other);
	}
	
	public bool OperatorGreaterOrEqual(QCborArray__IteratorPtr other)
	{
		return this.handle.OperatorGreaterOrEqual(other);
	}
	
	public bool OperatorEqualWithQCborArrayConstIterator(QCborArray__ConstIteratorPtr o)
	{
		return this.handle.OperatorEqualWithQCborArrayConstIterator(o);
	}
	
	public bool OperatorNotEqualWithQCborArrayConstIterator(QCborArray__ConstIteratorPtr o)
	{
		return this.handle.OperatorNotEqualWithQCborArrayConstIterator(o);
	}
	
	public bool OperatorLesserWithOther(QCborArray__ConstIteratorPtr other)
	{
		return this.handle.OperatorLesserWithOther(other);
	}
	
	public bool OperatorLesserOrEqualWithOther(QCborArray__ConstIteratorPtr other)
	{
		return this.handle.OperatorLesserOrEqualWithOther(other);
	}
	
	public bool OperatorGreaterWithOther(QCborArray__ConstIteratorPtr other)
	{
		return this.handle.OperatorGreaterWithOther(other);
	}
	
	public bool OperatorGreaterOrEqualWithOther(QCborArray__ConstIteratorPtr other)
	{
		return this.handle.OperatorGreaterOrEqualWithOther(other);
	}
	
	public void* OperatorPlusPlus()
	{
		return this.handle.OperatorPlusPlus();
	}
	
	public void OperatorPlusPlusWithInt(int32 param1)
	{
		this.handle.OperatorPlusPlusWithInt(param1);
	}
	
	public void* OperatorMinusMinus()
	{
		return this.handle.OperatorMinusMinus();
	}
	
	public void OperatorMinusMinusWithInt(int32 param1)
	{
		this.handle.OperatorMinusMinusWithInt(param1);
	}
	
	public void* OperatorPlusAssign(int32 j)
	{
		return this.handle.OperatorPlusAssign(j);
	}
	
	public void* OperatorMinusAssign(int32 j)
	{
		return this.handle.OperatorMinusAssign(j);
	}
	
	public void OperatorPlus(int32 j)
	{
		this.handle.OperatorPlus(j);
	}
	
	public void OperatorMinus(int32 j)
	{
		this.handle.OperatorMinus(j);
	}
	
	public int32 OperatorMinusWithQCborArrayConstIterator(QCborArray__ConstIteratorPtr j)
	{
		return this.handle.OperatorMinusWithQCborArrayConstIterator(default);
	}
	
}
extension CQt
{
	[LinkName("QCborArray__ConstIterator_new")]
	public static extern void* QCborArray__ConstIterator_new(void* other);
	[LinkName("QCborArray__ConstIterator_new2")]
	public static extern void* QCborArray__ConstIterator_new2();
	[LinkName("QCborArray__ConstIterator_new3")]
	public static extern void* QCborArray__ConstIterator_new3(void* param1);
	[LinkName("QCborArray__ConstIterator_OperatorAssign")]
	public static extern void QCborArray__ConstIterator_OperatorAssign(void* c_this, void* other);
	[LinkName("QCborArray__ConstIterator_OperatorMultiply")]
	public static extern void QCborArray__ConstIterator_OperatorMultiply(void* c_this);
	[LinkName("QCborArray__ConstIterator_OperatorMinusGreater")]
	public static extern void* QCborArray__ConstIterator_OperatorMinusGreater(void* c_this);
	[LinkName("QCborArray__ConstIterator_OperatorSubscript")]
	public static extern void QCborArray__ConstIterator_OperatorSubscript(void* c_this, int32 j);
	[LinkName("QCborArray__ConstIterator_OperatorEqual")]
	public static extern bool QCborArray__ConstIterator_OperatorEqual(void* c_this, void* o);
	[LinkName("QCborArray__ConstIterator_OperatorNotEqual")]
	public static extern bool QCborArray__ConstIterator_OperatorNotEqual(void* c_this, void* o);
	[LinkName("QCborArray__ConstIterator_OperatorLesser")]
	public static extern bool QCborArray__ConstIterator_OperatorLesser(void* c_this, void* other);
	[LinkName("QCborArray__ConstIterator_OperatorLesserOrEqual")]
	public static extern bool QCborArray__ConstIterator_OperatorLesserOrEqual(void* c_this, void* other);
	[LinkName("QCborArray__ConstIterator_OperatorGreater")]
	public static extern bool QCborArray__ConstIterator_OperatorGreater(void* c_this, void* other);
	[LinkName("QCborArray__ConstIterator_OperatorGreaterOrEqual")]
	public static extern bool QCborArray__ConstIterator_OperatorGreaterOrEqual(void* c_this, void* other);
	[LinkName("QCborArray__ConstIterator_OperatorEqualWithQCborArrayConstIterator")]
	public static extern bool QCborArray__ConstIterator_OperatorEqualWithQCborArrayConstIterator(void* c_this, void* o);
	[LinkName("QCborArray__ConstIterator_OperatorNotEqualWithQCborArrayConstIterator")]
	public static extern bool QCborArray__ConstIterator_OperatorNotEqualWithQCborArrayConstIterator(void* c_this, void* o);
	[LinkName("QCborArray__ConstIterator_OperatorLesserWithOther")]
	public static extern bool QCborArray__ConstIterator_OperatorLesserWithOther(void* c_this, void* other);
	[LinkName("QCborArray__ConstIterator_OperatorLesserOrEqualWithOther")]
	public static extern bool QCborArray__ConstIterator_OperatorLesserOrEqualWithOther(void* c_this, void* other);
	[LinkName("QCborArray__ConstIterator_OperatorGreaterWithOther")]
	public static extern bool QCborArray__ConstIterator_OperatorGreaterWithOther(void* c_this, void* other);
	[LinkName("QCborArray__ConstIterator_OperatorGreaterOrEqualWithOther")]
	public static extern bool QCborArray__ConstIterator_OperatorGreaterOrEqualWithOther(void* c_this, void* other);
	[LinkName("QCborArray__ConstIterator_OperatorPlusPlus")]
	public static extern void* QCborArray__ConstIterator_OperatorPlusPlus(void* c_this);
	[LinkName("QCborArray__ConstIterator_OperatorPlusPlusWithInt")]
	public static extern void QCborArray__ConstIterator_OperatorPlusPlusWithInt(void* c_this, int32 param1);
	[LinkName("QCborArray__ConstIterator_OperatorMinusMinus")]
	public static extern void* QCborArray__ConstIterator_OperatorMinusMinus(void* c_this);
	[LinkName("QCborArray__ConstIterator_OperatorMinusMinusWithInt")]
	public static extern void QCborArray__ConstIterator_OperatorMinusMinusWithInt(void* c_this, int32 param1);
	[LinkName("QCborArray__ConstIterator_OperatorPlusAssign")]
	public static extern void* QCborArray__ConstIterator_OperatorPlusAssign(void* c_this, int32 j);
	[LinkName("QCborArray__ConstIterator_OperatorMinusAssign")]
	public static extern void* QCborArray__ConstIterator_OperatorMinusAssign(void* c_this, int32 j);
	[LinkName("QCborArray__ConstIterator_OperatorPlus")]
	public static extern void QCborArray__ConstIterator_OperatorPlus(void* c_this, int32 j);
	[LinkName("QCborArray__ConstIterator_OperatorMinus")]
	public static extern void QCborArray__ConstIterator_OperatorMinus(void* c_this, int32 j);
	[LinkName("QCborArray__ConstIterator_OperatorMinusWithQCborArrayConstIterator")]
	public static extern int32 QCborArray__ConstIterator_OperatorMinusWithQCborArrayConstIterator(void* c_this, void j);
	/// Delete this object from C++ memory
	[LinkName("QCborArray__ConstIterator_Delete")]
	public static extern void QCborArray__ConstIterator_Delete(void* self);
}